# tatami_test

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: doxygenate.yaml  run-tests.yaml
docs/: Doxyfile  ForcedOracleWrapper_8hpp.html  ForcedOracleWrapper_8hpp_source.html  ReversedIndicesWrapper_8hpp.html  ReversedIndicesWrapper_8hpp_source.html  annotated.html  classes.html  classtatami__test_1_1ForcedOracleWrapper-members.html  classtatami__test_1_1ForcedOracleWrapper.html  classtatami__test_1_1ReversedIndicesWrapper-members.html  classtatami__test_1_1ReversedIndicesWrapper.html  create__indexed__subset_8hpp.html  create__indexed__subset_8hpp_source.html  dir_193eb880c2c09332d23b0a1cc9c4c034.html  doxygen_crawl.html  fetch_8hpp.html  fetch_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespacetatami__test.html  simulate__compressed__sparse_8hpp.html  simulate__compressed__sparse_8hpp_source.html  simulate__vector_8hpp.html  simulate__vector_8hpp_source.html  structtatami__test_1_1SimulateCompressedSparseOptions-members.html  structtatami__test_1_1SimulateCompressedSparseOptions.html  structtatami__test_1_1SimulateCompressedSparseResult-members.html  structtatami__test_1_1SimulateCompressedSparseResult.html  structtatami__test_1_1SimulateVectorOptions-members.html  structtatami__test_1_1SimulateVectorOptions.html  (+13 more)
docs/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_5.js  all_8.js  all_d.js  all_f.js  classes_4.js  classes_a.js  classes_b.js  classes_c.js  enums_5.js  files_2.js  files_5.js  files_b.js  files_c.js  files_d.js  functions_2.js  functions_5.js  functions_c.js  functions_d.js  functions_e.js  namespaces_0.js  pages_0.js  pages_1.js  searchdata.js  typedefs_7.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js  variables_8.js  variables_a.js
include/tatami_test/: ForcedOracleWrapper.hpp  ReversedIndicesWrapper.hpp  create_indexed_subset.hpp  fetch.hpp  simulate_compressed_sparse.hpp  simulate_vector.hpp  tatami_test.hpp  test_access.hpp  test_unsorted_access.hpp  throws_error.hpp
tests/: CMakeLists.txt
tests/src/: ForcedOracleWrapper.cpp  ReversedIndicesWrapper.cpp  simulate_compressed_sparse.cpp  simulate_vector.cpp  test_access.cpp  test_unsorted_access.cpp  throws_error.cpp
